--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -13,4 +13,11 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="MyTheme" parent="Theme.MaterialComponents.Light.DarkActionBar">
+        <item name="colorPrimary">#364DC5</item>
+        <item name="colorPrimaryDark">@color/purple_700</item>
+        <item name="colorAccent">#03A9F4</item>
+        <item name="android:colorBackground">@android:color/white</item>
+    </style>
 </resources>
