--- a/app/src/main/res/drawable/corner_background_dark.xml
+++ b/app/src/main/res/drawable/corner_background_dark.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <gradient android:startColor="#FFEB3B"
-        android:endColor="#290183"
+    <gradient
+        android:startColor="#772005"
+        android:endColor="@color/purple_700"
         android:angle="45"/>
-
 </shape>
