--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -21,4 +21,8 @@
         <item name="android:colorBackground">@android:color/white</item>
     </style>
 
+    <style name="MyTheme.Background">
+        <item name="android:background">@drawable/corner_background</item>
+    </style>
+
 </resources>
