--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,7 @@
     <color name="colorAccent">#FF5722</color>
     <color name="colorPrimary">#4D5DB5</color>
     <color name="colorPrimaryDark">#4D5DB5</color>
+    <color name="yellow">#FFEB3B</color>
+    <color name="blue">#3F51B5</color>
+
 </resources>
