--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.MovieSearch" parent="Theme.MaterialComponents.Light">
+    <style name="Theme.MovieSearch" parent="Theme.MaterialComponents.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -10,15 +10,18 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" >?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="android:fitsSystemWindows">true</item>
     </style>
 
-    <style name="MyTheme" parent="Theme.MaterialComponents.Light.DarkActionBar">
+    <style name="MyTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="colorPrimary">#364DC5</item>
         <item name="colorPrimaryDark">@color/purple_700</item>
         <item name="colorAccent">#03A9F4</item>
         <item name="android:colorBackground">@android:color/white</item>
+        <item name="android:statusBarColor" >@color/black</item>
+        <item name="android:windowTranslucentStatus">false</item>
     </style>
 
     <style name="MyTheme.Background">
