--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.MovieSearch" parent="Theme.MaterialComponents.NoActionBar">
+    <style name="Theme.MovieSearch" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_200</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -10,19 +10,15 @@
         <item name="colorSecondaryVariant">@color/teal_200</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" >?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
-        <item name="android:fitsSystemWindows">true</item>
-
     </style>
 
-    <style name="MyTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
+    <style name="MyTheme" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <item name="colorPrimary">#2E41A6</item>
         <item name="colorPrimaryDark">@color/purple_700</item>
         <item name="colorAccent">#025880</item>
         <item name="android:colorBackground">@color/black</item>
-        <item name="android:statusBarColor" >@color/black</item>
-        <item name="android:windowTranslucentStatus">false</item>
     </style>
 
     <style name="MyTheme.Background">
