--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,104 +7,30 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <HorizontalScrollView
-        android:id="@+id/top_menu"
-        android:layout_width="wrap_content"
-        android:layout_height="130dp"
-        android:layout_marginTop="10dp"
-        android:scrollbars="none"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/app_bar_layout">
+<!--    <com.google.android.material.appbar.AppBarLayout-->
+<!--        android:id="@+id/app_bar_layout"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:fitsSystemWindows="true"-->
+<!--        app:layout_constraintTop_toTopOf="parent">-->
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="wrap_content"
-            android:layout_height="130dp"
-            android:elevation="5dp"
-            app:cardCornerRadius="15dp">
+<!--        <com.google.android.material.appbar.MaterialToolbar-->
+<!--            android:id="@+id/topAppBar"-->
+<!--            style="@style/Widget.MaterialComponents.Toolbar.Primary"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="?attr/actionBarSize"-->
+<!--            app:menu="@menu/tool_bar_menu"-->
+<!--            app:navigationIcon="@drawable/ic_round_menu_24"-->
+<!--            app:title="Search it!" />-->
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="130dp"
-                android:orientation="horizontal"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+<!--    </com.google.android.material.appbar.AppBarLayout>-->
 
-                <ImageView
-                    android:id="@+id/imageView"
-                    android:layout_width="87.75dp"
-                    android:layout_height="130dp"
-                    android:background="@drawable/spider_man"
-                    android:scaleType="centerCrop" />
-
-                <ImageView
-                    android:id="@+id/imageView2"
-                    android:layout_width="87.75dp"
-                    android:layout_height="130dp"
-                    android:background="@drawable/black_adam"
-                    android:scaleType="centerCrop" />
-
-                <ImageView
-                    android:id="@+id/imageView3"
-                    android:layout_width="87.75dp"
-                    android:layout_height="130dp"
-                    android:background="@drawable/poster_3"
-                    android:scaleType="centerCrop" />
-
-                <ImageView
-                    android:id="@+id/imageView4"
-                    android:layout_width="85dp"
-                    android:layout_height="130dp"
-                    android:background="@drawable/loki"
-                    android:scaleType="centerCrop" />
-
-                <ImageView
-                    android:layout_width="85dp"
-                    android:layout_height="130dp"
-                    android:background="@drawable/pacific_rim"
-                    android:scaleType="centerCrop" />
-
-                <ImageView
-                    android:layout_width="85dp"
-                    android:layout_height="130dp"
-                    android:background="@drawable/captain_marvel"
-                    android:scaleType="centerCrop" />
-
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
-    </HorizontalScrollView>
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:autoLink="web"
-        android:linksClickable="true"
-
-        android:text="@string/web_res"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/top_menu" />
-
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/app_bar_layout"
+    <FrameLayout
+        android:id="@+id/fragment_placeholder"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fitsSystemWindows="true"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/topAppBar"
-            style="@style/Widget.MaterialComponents.Toolbar.Primary"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            app:menu="@menu/tool_bar_menu"
-            app:navigationIcon="@drawable/ic_round_menu_24"
-            app:title="Search it!" />
-
-    </com.google.android.material.appbar.AppBarLayout>
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
@@ -116,17 +42,5 @@
         app:labelVisibilityMode="labeled"
         app:layout_constraintBottom_toBottomOf="parent"
         app:menu="@menu/tool_bar_navigation_menu" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/main_recycler"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_margin="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        tools:listitem="@layout/film_item" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
